# Codeforces

./: 1697d.cpp  1739f.cpp  1780g.cpp  1913f.cpp  1942g.cpp  1967c.cpp  1971h.cpp  1974g.cpp  1975f.cpp  1979e.cpp  1986f.cpp  1993f2.cpp  2002d2.cpp  2003e.cpp  2003f.cpp  2004f.cpp  2006D.cpp  2020f.cpp  2020fstd.cpp  2021d.cpp  932Gstd.cpp  932f.cpp  932g.cpp  CMakeLists (2).txt  CMakeLists.txt
