cmake_minimum_required(VERSION 3.26)
project(CF)

set(CMAKE_CXX_STANDARD 17)

add_executable(CF main.cpp)
add_executable(2002d2 2002d2.cpp)
add_executable(2004f 2004f.cpp)
add_executable(2003f 2003f.cpp)
add_executable(1967c 1967c.cpp)
add_executable(1979e 1979e.cpp)
add_executable(1913f 1913f.cpp)
add_executable(1780g 1780g.cpp)
add_executable(1739f 1739f.cpp)
add_executable(932g 932g.cpp)
add_executable(932gstd 932Gstd.cpp)
add_executable(2020f 2020f.cpp)
add_executable(1993f2 1993f2.cpp)
add_executable(2020fstd 2020fstd.cpp)
add_executable(2021d 2021d.cpp)
add_executable(2006D 2006D.cpp)
add_executable(1697d 1697d.cpp)
add_executable(2003e1 2003e.cpp)
add_executable(1942g 1942g.cpp)
add_executable(932f 932f.cpp)
add_executable(1975f 1975f.cpp)

